# briefa

./: .env.example  .gitignore  README.md  SETUP.bat  SETUP.ps1  SETUP.sh  pyproject.toml  requirements.txt  run.bat  run.ps1
briefa/: __init__.py  __main__.py  channel.py  cli.py  pipeline.py  render_lock.py
briefa/images/: __init__.py  cloudflare.py  pollinations.py  provider.py  stock.py
briefa/planner/: __init__.py  content_types.py  fb_caption_editor.py  full_caption.py  gemini_client.py  prompts.py  scene_models.py  voice_policy.py
briefa/renderer/: __init__.py  composer.py  composition.html.j2  hyperframes.py
briefa/renderer/layouts/: big_stat_card.html.j2  bullet_list.html.j2  cta_outro.html.j2  hero_card_with_logo.html.j2  kpi_grid.html.j2  screenshot_embed.html.j2  terminal_window.html.j2  timeline.html.j2  title_hero.html.j2
briefa/renderer/themes/: bright.css  corporate.css  dark.css  vivid.css
briefa/sources/: __init__.py  github.py  multi_source.py  router.py  url_extract.py  vision.py
briefa/tts/: __init__.py  edge.py  elevenlabs.py  google.py  gtts_adapter.py  phonetic.py  router.py
briefa/utils/: __init__.py  audio_measure.py
channels/: README.md
channels/Khue Tran/: channel.env
channels/Khue Tran/static/: README.md
channels/example-vn-bright/: channel.env
channels/example-vn-bright/static/: README.md
